grammar/ExprParser.py
# Generated from ./grammar/Expr.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'public'", "'private'", "'protected'", 
                     "'static'", "'final'", "'abstract'", "'synchronized'", 
                     "'volatile'", "'transient'", "'native'", "'strictfp'", 
                     "'void'", "'class'", "'System'", "'out'", "'println'", 
                     "'default'", "'this'", "'String'", "'byte'", "'short'", 
                     "'int'", "'long'", "'float'", "'double'", "'char'", 
                     "'boolean'", "'if'", "'else'", "'switch'", "'case'", 
                     "'for'", "'while'", "'do'", "'break'", "'continue'", 
                     "'return'", "'else if'", "'true'", "'false'", "'null'", 
                     "'interface'", "'extends'", "'implements'", "'new'", 
                     "'super'", "'instanceof'", "'enum'", "'try'", "'catch'", 
                     "'finally'", "'throw'", "'throws'", "'package'", "'import'", 
                     "'assert'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'='", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'&&'", "'||'", "'!'", "'>'", "'>='", 
                     "'<'", "'<='", "'=='", "'!='", "'++'", "'--'", "'?'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "';'", "'.'", 
                     "','", "':'", "'@'" ]

    symbolicNames = [ "<INVALID>", "PUBLIC", "PRIVATE", "PROTECTED", "STATIC", 
                      "FINAL", "ABSTRACT", "SYNCHRONIZED", "VOLATILE", "TRANSIENT", 
                      "NATIVE", "STRICTFP", "VOID", "CLASS", "SYSTEM", "OUT", 
                      "PRINTLN", "DEFAULT", "THIS", "STRING", "BYTE", "SHORT", 
                      "INT", "LONG", "FLOAT", "DOUBLE", "CHAR", "BOOLEAN", 
                      "IF", "ELSE", "SWITCH", "CASE", "FOR", "WHILE", "DO", 
                      "BREAK", "CONTINUE", "RETURN", "ELSE_IF", "TRUE", 
                      "FALSE", "NULL", "INTERFACE", "EXTENDS", "IMPLEMENTS", 
                      "NEW", "SUPER", "INSTANCEOF", "ENUM", "TRY", "CATCH", 
                      "FINALLY", "THROW", "THROWS", "PACKAGE", "IMPORT", 
                      "ASSERT", "IDT", "ENTERO", "DECIMAL", "CARACTER", 
                      "CADENA", "ASIGNACION", "MAS", "MENOS", "POR", "ENTRE", 
                      "MODULO", "AND", "OR", "NOT", "MAYOR", "MAYOR_IGUAL", 
                      "MENOR", "MENOR_IGUAL", "IGUAL", "DIFERENTE", "INCREMENTO", 
                      "DECREMENTO", "TERNARIO", "PAR_1", "PAR_2", "COR_1", 
                      "COR_2", "LLA_1", "LLA_2", "PUNTO_COMA", "PUNTO", 
                      "COMA", "DOS_PUNTOS", "ARROBA", "COMENTARIO_LINEA", 
                      "COMENTARIO_BLOQUE", "WS" ]

    RULE_programa = 0
    RULE_tipoDecl = 1
    RULE_claseDecl = 2
    RULE_interfaceDecl = 3
    RULE_miembroInterfaz = 4
    RULE_miembroClase = 5
    RULE_modificador = 6
    RULE_tipo = 7
    RULE_atributoDecl = 8
    RULE_declaradorVariable = 9
    RULE_constructorDecl = 10
    RULE_metodoDecl = 11
    RULE_listaParametros = 12
    RULE_parametro = 13
    RULE_bloque = 14
    RULE_sentencia = 15
    RULE_declaracionVariable = 16
    RULE_sentenciaIf = 17
    RULE_sentenciaFor = 18
    RULE_forInit = 19
    RULE_sentenciaWhile = 20
    RULE_sentenciaDoWhile = 21
    RULE_sentenciaTry = 22
    RULE_catchClause = 23
    RULE_sentenciaReturn = 24
    RULE_sentenciaExpr = 25
    RULE_expr = 26
    RULE_listaArgs = 27
    RULE_literal = 28

    ruleNames =  [ "programa", "tipoDecl", "claseDecl", "interfaceDecl", 
                   "miembroInterfaz", "miembroClase", "modificador", "tipo", 
                   "atributoDecl", "declaradorVariable", "constructorDecl", 
                   "metodoDecl", "listaParametros", "parametro", "bloque", 
                   "sentencia", "declaracionVariable", "sentenciaIf", "sentenciaFor", 
                   "forInit", "sentenciaWhile", "sentenciaDoWhile", "sentenciaTry", 
                   "catchClause", "sentenciaReturn", "sentenciaExpr", "expr", 
                   "listaArgs", "literal" ]

    EOF = Token.EOF
    PUBLIC=1
    PRIVATE=2
    PROTECTED=3
    STATIC=4
    FINAL=5
    ABSTRACT=6
    SYNCHRONIZED=7
    VOLATILE=8
    TRANSIENT=9
    NATIVE=10
    STRICTFP=11
    VOID=12
    CLASS=13
    SYSTEM=14
    OUT=15
    PRINTLN=16
    DEFAULT=17
    THIS=18
    STRING=19
    BYTE=20
    SHORT=21
    INT=22
    LONG=23
    FLOAT=24
    DOUBLE=25
    CHAR=26
    BOOLEAN=27
    IF=28
    ELSE=29
    SWITCH=30
    CASE=31
    FOR=32
    WHILE=33
    DO=34
    BREAK=35
    CONTINUE=36
    RETURN=37
    ELSE_IF=38
    TRUE=39
    FALSE=40
    NULL=41
    INTERFACE=42
    EXTENDS=43
    IMPLEMENTS=44
    NEW=45
    SUPER=46
    INSTANCEOF=47
    ENUM=48
    TRY=49
    CATCH=50
    FINALLY=51
    THROW=52
    THROWS=53
    PACKAGE=54
    IMPORT=55
    ASSERT=56
    IDT=57
    ENTERO=58
    DECIMAL=59
    CARACTER=60
    CADENA=61
    ASIGNACION=62
    MAS=63
    MENOS=64
    POR=65
    ENTRE=66
    MODULO=67
    AND=68
    OR=69
    NOT=70
    MAYOR=71
    MAYOR_IGUAL=72
    MENOR=73
    MENOR_IGUAL=74
    IGUAL=75
    DIFERENTE=76
    INCREMENTO=77
    DECREMENTO=78
    TERNARIO=79
    PAR_1=80
    PAR_2=81
    COR_1=82
    COR_2=83
    LLA_1=84
    LLA_2=85
    PUNTO_COMA=86
    PUNTO=87
    COMA=88
    DOS_PUNTOS=89
    ARROBA=90
    COMENTARIO_LINEA=91
    COMENTARIO_BLOQUE=92
    WS=93

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def tipoDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.TipoDeclContext)
            else:
                return self.getTypedRuleContext(ExprParser.TipoDeclContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_programa




    def programa(self):

        localctx = ExprParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 58
                self.tipoDecl()
                self.state = 61 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 4398046523390) != 0)):
                    break

            self.state = 63
            self.match(ExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def claseDecl(self):
            return self.getTypedRuleContext(ExprParser.ClaseDeclContext,0)


        def interfaceDecl(self):
            return self.getTypedRuleContext(ExprParser.InterfaceDeclContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_tipoDecl




    def tipoDecl(self):

        localctx = ExprParser.TipoDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_tipoDecl)
        try:
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.claseDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.interfaceDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClaseDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(ExprParser.CLASS, 0)

        def IDT(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.IDT)
            else:
                return self.getToken(ExprParser.IDT, i)

        def LLA_1(self):
            return self.getToken(ExprParser.LLA_1, 0)

        def LLA_2(self):
            return self.getToken(ExprParser.LLA_2, 0)

        def modificador(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ModificadorContext)
            else:
                return self.getTypedRuleContext(ExprParser.ModificadorContext,i)


        def EXTENDS(self):
            return self.getToken(ExprParser.EXTENDS, 0)

        def IMPLEMENTS(self):
            return self.getToken(ExprParser.IMPLEMENTS, 0)

        def miembroClase(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.MiembroClaseContext)
            else:
                return self.getTypedRuleContext(ExprParser.MiembroClaseContext,i)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COMA)
            else:
                return self.getToken(ExprParser.COMA, i)

        def getRuleIndex(self):
            return ExprParser.RULE_claseDecl




    def claseDecl(self):

        localctx = ExprParser.ClaseDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_claseDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4094) != 0):
                self.state = 69
                self.modificador()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 75
            self.match(ExprParser.CLASS)
            self.state = 76
            self.match(ExprParser.IDT)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==43:
                self.state = 77
                self.match(ExprParser.EXTENDS)
                self.state = 78
                self.match(ExprParser.IDT)


            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==44:
                self.state = 81
                self.match(ExprParser.IMPLEMENTS)
                self.state = 82
                self.match(ExprParser.IDT)
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==88:
                    self.state = 83
                    self.match(ExprParser.COMA)
                    self.state = 84
                    self.match(ExprParser.IDT)
                    self.state = 89
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 92
            self.match(ExprParser.LLA_1)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 144115188343783422) != 0):
                self.state = 93
                self.miembroClase()
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 99
            self.match(ExprParser.LLA_2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InterfaceDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTERFACE(self):
            return self.getToken(ExprParser.INTERFACE, 0)

        def IDT(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.IDT)
            else:
                return self.getToken(ExprParser.IDT, i)

        def LLA_1(self):
            return self.getToken(ExprParser.LLA_1, 0)

        def LLA_2(self):
            return self.getToken(ExprParser.LLA_2, 0)

        def modificador(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ModificadorContext)
            else:
                return self.getTypedRuleContext(ExprParser.ModificadorContext,i)


        def EXTENDS(self):
            return self.getToken(ExprParser.EXTENDS, 0)

        def miembroInterfaz(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.MiembroInterfazContext)
            else:
                return self.getTypedRuleContext(ExprParser.MiembroInterfazContext,i)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COMA)
            else:
                return self.getToken(ExprParser.COMA, i)

        def getRuleIndex(self):
            return ExprParser.RULE_interfaceDecl




    def interfaceDecl(self):

        localctx = ExprParser.InterfaceDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_interfaceDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4094) != 0):
                self.state = 101
                self.modificador()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 107
            self.match(ExprParser.INTERFACE)
            self.state = 108
            self.match(ExprParser.IDT)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==43:
                self.state = 109
                self.match(ExprParser.EXTENDS)
                self.state = 110
                self.match(ExprParser.IDT)
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==88:
                    self.state = 111
                    self.match(ExprParser.COMA)
                    self.state = 112
                    self.match(ExprParser.IDT)
                    self.state = 117
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 120
            self.match(ExprParser.LLA_1)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 144115188343771134) != 0):
                self.state = 121
                self.miembroInterfaz()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 127
            self.match(ExprParser.LLA_2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MiembroInterfazContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(ExprParser.TipoContext,0)


        def IDT(self):
            return self.getToken(ExprParser.IDT, 0)

        def PAR_1(self):
            return self.getToken(ExprParser.PAR_1, 0)

        def PAR_2(self):
            return self.getToken(ExprParser.PAR_2, 0)

        def PUNTO_COMA(self):
            return self.getToken(ExprParser.PUNTO_COMA, 0)

        def listaParametros(self):
            return self.getTypedRuleContext(ExprParser.ListaParametrosContext,0)


        def declaradorVariable(self):
            return self.getTypedRuleContext(ExprParser.DeclaradorVariableContext,0)


        def modificador(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ModificadorContext)
            else:
                return self.getTypedRuleContext(ExprParser.ModificadorContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_miembroInterfaz




    def miembroInterfaz(self):

        localctx = ExprParser.MiembroInterfazContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_miembroInterfaz)
        self._la = 0 # Token type
        try:
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.tipo()
                self.state = 130
                self.match(ExprParser.IDT)
                self.state = 131
                self.match(ExprParser.PAR_1)
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 144115188343767040) != 0):
                    self.state = 132
                    self.listaParametros()


                self.state = 135
                self.match(ExprParser.PAR_2)
                self.state = 136
                self.match(ExprParser.PUNTO_COMA)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4094) != 0):
                    self.state = 138
                    self.modificador()
                    self.state = 143
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 144
                self.tipo()
                self.state = 145
                self.declaradorVariable()
                self.state = 146
                self.match(ExprParser.PUNTO_COMA)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MiembroClaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atributoDecl(self):
            return self.getTypedRuleContext(ExprParser.AtributoDeclContext,0)


        def constructorDecl(self):
            return self.getTypedRuleContext(ExprParser.ConstructorDeclContext,0)


        def metodoDecl(self):
            return self.getTypedRuleContext(ExprParser.MetodoDeclContext,0)


        def claseDecl(self):
            return self.getTypedRuleContext(ExprParser.ClaseDeclContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_miembroClase




    def miembroClase(self):

        localctx = ExprParser.MiembroClaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_miembroClase)
        try:
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.atributoDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.constructorDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 152
                self.metodoDecl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 153
                self.claseDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModificadorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PUBLIC(self):
            return self.getToken(ExprParser.PUBLIC, 0)

        def PRIVATE(self):
            return self.getToken(ExprParser.PRIVATE, 0)

        def PROTECTED(self):
            return self.getToken(ExprParser.PROTECTED, 0)

        def STATIC(self):
            return self.getToken(ExprParser.STATIC, 0)

        def FINAL(self):
            return self.getToken(ExprParser.FINAL, 0)

        def ABSTRACT(self):
            return self.getToken(ExprParser.ABSTRACT, 0)

        def SYNCHRONIZED(self):
            return self.getToken(ExprParser.SYNCHRONIZED, 0)

        def VOLATILE(self):
            return self.getToken(ExprParser.VOLATILE, 0)

        def TRANSIENT(self):
            return self.getToken(ExprParser.TRANSIENT, 0)

        def NATIVE(self):
            return self.getToken(ExprParser.NATIVE, 0)

        def STRICTFP(self):
            return self.getToken(ExprParser.STRICTFP, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_modificador




    def modificador(self):

        localctx = ExprParser.ModificadorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_modificador)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 4094) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BYTE(self):
            return self.getToken(ExprParser.BYTE, 0)

        def SHORT(self):
            return self.getToken(ExprParser.SHORT, 0)

        def INT(self):
            return self.getToken(ExprParser.INT, 0)

        def LONG(self):
            return self.getToken(ExprParser.LONG, 0)

        def FLOAT(self):
            return self.getToken(ExprParser.FLOAT, 0)

        def DOUBLE(self):
            return self.getToken(ExprParser.DOUBLE, 0)

        def CHAR(self):
            return self.getToken(ExprParser.CHAR, 0)

        def BOOLEAN(self):
            return self.getToken(ExprParser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(ExprParser.STRING, 0)

        def IDT(self):
            return self.getToken(ExprParser.IDT, 0)

        def COR_1(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COR_1)
            else:
                return self.getToken(ExprParser.COR_1, i)

        def COR_2(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COR_2)
            else:
                return self.getToken(ExprParser.COR_2, i)

        def getRuleIndex(self):
            return ExprParser.RULE_tipo




    def tipo(self):

        localctx = ExprParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 144115188343767040) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==82:
                self.state = 159
                self.match(ExprParser.COR_1)
                self.state = 160
                self.match(ExprParser.COR_2)
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtributoDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(ExprParser.TipoContext,0)


        def declaradorVariable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.DeclaradorVariableContext)
            else:
                return self.getTypedRuleContext(ExprParser.DeclaradorVariableContext,i)


        def PUNTO_COMA(self):
            return self.getToken(ExprParser.PUNTO_COMA, 0)

        def modificador(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ModificadorContext)
            else:
                return self.getTypedRuleContext(ExprParser.ModificadorContext,i)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COMA)
            else:
                return self.getToken(ExprParser.COMA, i)

        def getRuleIndex(self):
            return ExprParser.RULE_atributoDecl




    def atributoDecl(self):

        localctx = ExprParser.AtributoDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_atributoDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4094) != 0):
                self.state = 166
                self.modificador()
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)
